bug fix + reduce docker image size
