# products-api/handlers/put.go
@@ -1,8 +1,8 @@
 package handlers
 
 import (
-	"github.com/adamdadd/go-products-microservice/repository"
 	"github.com/gorilla/mux"
+	"go-products-microservice/products-api/repository"
 	"net/http"
 	"strconv"
 )
@@ -14,14 +14,19 @@ func (p *Products) Update(rw http.ResponseWriter, r *http.Request) {
 		p.logger.Println("Failed to convert id to int: ", vars["id"])
 		http.Error(rw, "Invalid URI", http.StatusBadRequest)
 	}
+
 	product := r.Context().Value(KeyProduct{}).(repository.Product)
+
 	err := repository.UpdateProduct(id, &product)
 	if err != nil {
 		http.Error(rw, "Product not found", http.StatusNotFound)
 		return
 	}
+
 	p.logger.Printf("Product updated: ", id)
+	rw.WriteHeader(http.StatusCreated)
 }
+
 
 func (c *Categories) Update(rw http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
@@ -30,11 +35,15 @@ func (c *Categories) Update(rw http.ResponseWriter, r *http.Request) {
 		c.logger.Println("Failed to convert id to int: ", vars["id"])
 		http.Error(rw, "Invalid URI", http.StatusBadRequest)
 	}
+
 	cat := r.Context().Value(KeyCategories{}).(repository.Category)
+
 	err := repository.UpdateCategory(id, &cat)
 	if err != nil {
 		http.Error(rw, "Product not found", http.StatusNotFound)
 		return
 	}
+
 	c.logger.Printf("Product updated: ", id)
+	rw.WriteHeader(http.StatusCreated)
 }
